# demo-python-shift-schduler

./: README.md  calendra.py  main.py  pyproject.toml
